[package]
name = "gee"
version = "0.1.0"
authors = ["Ammon Taylor <ammonx9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spinners = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"