[package]
name = "gee"
version = "0.1.0"
authors = ["Ammon Taylor <ammonx9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "*"
spinners = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "0.8"
clap = { version = "~2.27.0", features = ["yaml"] }